# peak_it_2024_backend

./: .env.example  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml  docker-image.yml
alembic/: env.py
alembic/versions/: 2024_10_13_1941-d9ab19fe0f2d_authentication.py  2024_10_15_1728-3e4a9d7b9bfc_auth_with_phone_number_instead_of_email.py  2024_10_16_0118-cfb60237dc51_sms_code_authentication.py  2024_10_16_0251-3f4fba5976ab_refresh_tokens.py
migrations/: env.py
migrations/versions/: 17e65da6e637_init_with_boilerplate.py
src/: config.py  database.py  main.py
src/auth/: admin.py  auth.py  constants.py  dependencies.py  exceptions.py  manager.py  models.py  repositories.py  router.py  schemas.py  service.py  utils.py
src/core/: config.py  database.py  dependencies.py  repository.py  schemas.py
src/media/: dependencies.py  repositories.py  router.py
